--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "petful-server",
   "scripts": {
-    "dev": "nodemon server"
+    "dev": "nodemon "
   },
   "dependencies": {
     "body-parser": "^1.19.0",
