--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "express": "^4.17.1",
     "knex": "^0.20.10",
     "morgan": "^1.10.0",
-    "pg": "^7.18.2"
+    "pg": "^7.18.2",
+    "dotenv": "^8.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
